[package]
name = "spotbrainz"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
chrono = "0.4.41"
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
fern = "0.7.1"
listenbrainz = "0.8.1"
log = "0.4.27"
reqwest = "0.12.23"
rspotify = { version = "0.15.0", features = ["env-file"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_derive = "1.0.219"
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
